# fast_api_templete

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .safety-project.ini  .vulture-tests-whitelist.py  .vulture.py  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  HISTORY.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  check_user.py  cleanup_imports.py  codecov.yml  config.toml  docker-compose-dev.yaml  docker-compose.yaml  docker-compose.yml  inspect_db.py  mkdocs.yml  mypy.ini  plan.md  pyproject.toml  settings.toml  setup.py
.ci/: .gitlab-ci-main.yml  .gitlab-ci.yml  CI_CONFIG_README.md  gitlab-ci.yml
.github/: init.sh  rename_project.sh
.github/workflows/: cloud-integration.yml  continuous-integration.yml  docker-size-monitor.yml  docker-size-report.yml  main.yml  release.yml  test-cloud-providers.yml
ci/: detect-ci.sh  fix-linting.sh  fix-type-annotations.py
config/: auth.toml  invalid.toml
config/cloud/: custom.toml  hetzner.toml
docs/: cloud-testing-strategy.md  index.md  modules.md
docs/guide/: ci-cd.md  development.md
docs/testing/: cloud_testing.md
fast_api_template/: __init__.py  __main__.py  app.py  auth_core.py  cli.py  config.py  database.py  db.py  default.toml  main.py  security.py
fast_api_template/auth/: __init__.py  auth.py
fast_api_template/cloud/: __init__.py  aws.py  azure.py  cloud_service_interface.py  cloud_service_provider.py  custom.py  gcp.py  hetzner.py  interfaces.py  local.py
fast_api_template/config/: __init__.py  cloud.py  default.toml  settings.py
fast_api_template/config/stubs/: dynaconf.pyi
fast_api_template/models/: __init__.py  content.py  user.py
fast_api_template/routes/: __init__.py  auth.py  auth_routes.py  content.py  profile.py  security.py  user.py
fast_api_template/services/: auth_module.py  cloud.py
fast_api_template/stubs/: dynaconf.pyi
fast_api_template/utils/: __init__.py  base_module.py  config.py  module_registry.py  password.py  registry.py
middleware/: MIDDLEWARE_PURPOSE.md
schemas/: SCHEMAS_PURPOSE.md
scripts/: SCRIPTS_README.md  check_dependencies.py  entrypoint.sh  fix_imports.py  fix_linting.sh  fix_version.sh  type_annotations.py
services/: SERVICES_PURPOSE.md  auth_module.py
stubs/: STUBS_README.md  __init__.py  boto3.pyi  boto_stubs.py  dynaconf.pyi
stubs/app_test_helpers/: README.md  __init__.py  _init_typing.pyi
stubs/boto_stubs/: __init__.py
stubs/fast_api_template/config/: cloud.pyi
stubs/minio/: __init__.pyi  error.pyi
stubs/moto/: __init__.pyi
stubs/pika/: __init__.pyi
stubs/requests_mock/: __init__.pyi
stubs/test_helpers/: __init__.pyi
templates/: TEMPLATES_PURPOSE.md
tests/: conftest.py  test_app.py  test_base_module.py  test_cli.py  test_config.py  test_content_api.py  test_profile.py  test_settings.toml  test_user_api.py
tests/cloud/: CLOUD_PROVIDER_TESTING.md  conftest.py  test_aws_cloud_service.py  test_aws_moto.py  test_azure_mock.py  test_azure_transport_mock.py  test_cloud_base.py  test_cloud_config.py  test_cloud_service_provider.py  test_custom_cloud_service.py  test_custom_provider_mock.py  test_dependencies.py  test_docker_integration.py  test_gcp_mock.py  test_hetzner_cloud_service.py  test_hetzner_mock.py  test_integration.py
tests/fixtures/: test_config.toml
utils/: UTILS_PURPOSE.md  base_module.py  config.py  registry.py
